Seen with "LibreOffice 3.4Beta3 – WIN7 Home Premium (64bit) English UI [DEV300m103 (Build:3)]" CALC Check / uncheck 'Find': hides / shows Toolbar 'Formatting' (Not reproducible during further tests) Uncheck 'Formatting': hides Toolbar 'Formatting' Check 'Text Formatting' makes Toolbar Formatting visible again Uncheck 'Text Formatting' without effec? Other Applications also affected with different problems: WRITER Uncheck 'Formatting' makes toolbar invisible. Then Check / uncheck makes visible / invisible a self created toolbar vor Lorem Ipsum Extension. Check / uncheck 'Lorem Ipsum' shows / hides 'Navigation' (Not reproducible during further tests) Check / uncheck 'OLE-objects' lost function after first test Other UI Languages seem to cause different problems, further investigation required. If this one will be confirmed it would be a blocker
*** Bug 36785 has been marked as a duplicate of this bug. ***
Confirmed by observations from "Bug 36571 - Find bar does not appear properly at top of screen", "Bug 36785 - Formatting toolbar in chart is not changed hidden to display."
Adding launchpad bug lp#709778 (and duplicates lp#713015, lp#763180, lp#774546, lp#775697) with more descriptions.
Modified Plaform / OS due to to Comment 3
Noel - Kendy asked me to ask you to take a look at this - is that ok ? :-)
launchpad bug lp#709778 is actually not exactly this same issue. It is about that in LO Base you can not edit a form. When you try this the status bar is not displayed, and neither are the needed tools bar to edit the form. You can not enable them. This issue seems to be specific to Base and especially to the Linux version. The tools bar is displayed correctly in the Windows version. Ferry
lp#709778 is reported against LO-3.3.2, so it is an older bug. It has many duplicates, so we should fix it ASAP but it should not block the 3.4.0 release => slightly reducing the severity
(In reply to comment #7) >[...] so we should fix it ASAP but it should not block the 3.4.0 release > => slightly reducing the severity IMHO especially "Bug 36571 - Find bar does not appear properly at top of screen" makes LibO 3.4 completely unusable for John Doe, the taste a new user will get is disastrous. Technically a car with steering wheel working inverted has only a very small defect, a willing driver can drive it for hundreds of thousands of km. But I doubt that that car can get many fans.
(In reply to comment #8) > (In reply to comment #7) > >[...] so we should fix it ASAP but it should not block the 3.4.0 release > > => slightly reducing the severity > > IMHO especially "Bug 36571 - Find bar does not appear properly at top of > screen" makes LibO 3.4 completely unusable for John Doe, the taste a new user > will get is disastrous. > > Technically a car with steering wheel working inverted has only a very small > defect, a willing driver can drive it for hundreds of thousands of km. But I > doubt that that car can get many fans. actually I agree that this is a blocker, in trying to debug this it is clear that it is *very* broken. Basically if you close *any* toolbar and subsequently try to hide or reenable any other toolbars then the results are... unpredictable. some good news: I am close I think to getting a fix but it is taking me time to work from the bottom up ( and I have little knowledge of the framework splurge ) so be patient.. The other good news I can offer is that at least there is nothing sinister like memory corruption going on here ( or at least valgrind doen't complain ), it seems this really is just some bug in the layout code. seem this is a duplicate of http://openoffice.org/bugzilla/show_bug.cgi?id=117864
*** Bug 36571 has been marked as a duplicate of this bug. ***
fixed on master http://cgit.freedesktop.org/libreoffice/libs-core/commit/?id=ea29c4f0d289890fcdb2f12380aa1ccf3d1028c9
@Noel: The fix commit looks trivial, is that really all that is to it? If so, I would propose to cherry-pick this to the libreoffice-3-3 branch too for the 3.3.3 micro release.
(In reply to comment #12) > @Noel: The fix commit looks trivial, is that really all that is to it? who knows, it seems to fix it in this instance :-) > If so, I would propose to cherry-pick this to the libreoffice-3-3 branch too for the 3.3.3 micro release. erm, well I don't see this problem on 3.3 at all, this problem is afaiks only on 3.4, I see some mention above of some launchpad bugs that seem to be around since 3.3.2 ( maybe that's what you refer to ) but... it seems that someone above mentions that the lp bugs in question are to do with something else ( base related ). This bug is purely to do with the bizarre and unexpected behaviour when you check/uncheck toolbars to display/undisplay them
Cherry-picked to libreoffice-3-4, looks good to me, and fixes the thing for me :-)
(In reply to comment #13) > erm, well I don't see this problem on 3.3 at all, this problem is afaiks only > on 3.4, I see some mention above of some launchpad bugs that seem to be around > since 3.3.2 ( maybe that's what you refer to ) but... it seems that someone > above mentions that the lp bugs in question are to do with something else ( > base related ). Indeed, https://launchpad.net/bugs/709778 (and dupes) could be a totally different issue. I am removing it here as bug URL for now. However, https://bugs.freedesktop.org/show_bug.cgi?id=36620 might be a duplicate of this and thus https://launchpad.net/bugs/771542 too.