fix for fdo#36684

fix layout problem with toolbars ( when enabling/disabling them from View/Toolbars )